--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "husky": {
+	  "hooks": {
+		  "pre-commit": "eslint . --ext .js"
+	  }
+  }
 }
