--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "husky": {
 	  "hooks": {
-		  "pre-commit": "eslint . --ext .js"
+		  "pre-commit": "eslint . --ext .js",
+		  "pre-push": "git rev-parse --abbrev-ref HEAD | grep -v master"
 	  }
   }
 }
