--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 SLACK_TOKEN=xoxb-816388530082-831033122167-aY5XKuGkaKf6QqlkTtZJS2XG
+SLACK_TESTER_TOKEN=xoxb-816388530082-835415939907-PURCnacGmBhI6zQBdSPigyRG
+TESTING_CHANNEL=GQJ2Y9ZNE
